2016-02-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (initialize_buffer_text): Delete redundant assignment.

2016-02-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (read_file): Free not just the struct but also the
	data it contains, and also when it is the first and only line.
	This fixes Savannah bug #47153 reported by Mike Frysinger.
	* src/files.c (get_full_path): Avoid losing a buffer when getcwd()
	fails. 	This fixes Savannah bug #47129 reported by Mike Frysinger.

2016-02-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): Make iterating through replacement
	matches behave again like iterating through search matches: showing
	them centered when found offscreen.  This fixes Savannah bug #47127.
	* src/text.c (do_int_spell_fix): Restore the above behavior also for
	the internal spell fixer.
	* src/prompt.c (do_statusbar_input, do_statusbar_verbatim_input,
	do_statusbar_output): Do the copying from input to output just once.
	* src/prompt.c (do_statusbar_output): Rename and condense some stuff,
	and correct the main comment: filtering means allow_cntrls==FALSE.
	* README, TODO, doc/man/{nano.1,rnano.1,nanorc.5}: Say that 2.5.x
	is a "rolling" release, lock files are done, and prepare for 2.5.3.

2016-02-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (do_browser, browser_refresh): Rebuild the file list
	only when necessary, not for each and every cursor movement.  This
	fixes Savannah bug #47133.
	* src/files.c (save_poshistory): Allocate enough space for printing
	out the line and column numbers.  This fixes Savannah bug #47135.
	* src/*.c: Switch the cursor on and off at the appropriate moments,
	so that it no longer shows in the help screen nor in the file list.
	This fixes Savannah bug #47126.

GNU nano 2.5.2 - 2016.02.12

2016-02-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_linter): Go to the next item in the list before